--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,29 @@
 ---
 # defaults file for bacula-client
+
+bacula_server_dir: "dir-name"
+
+bacula_client_name: "fd-{{ ansible_hostname }}"
+
+##################################################
+# Use commitity binaries from bacula systems?
+
+bacula_community_binaries: no
+bacula_community_version: "9.4.2"
+bacula_community_key: "XXXXXXXXXX"
+
+# don't override, this is what bacula systems provide:
+bacula_community_deb_releases:
+ - jessie
+ - stretch
+ - xenial
+ - bionic
+
+##################################################
+
+# overwritten in playbook logic for community
+install_packages:
+ - bacula-client
+ - bacula-common
+
+##################################################
