--- a/templates/etc/bacula/bacula-fd-9.conf
+++ b/templates/etc/bacula/bacula-fd-9.conf
@@ -17,6 +17,14 @@
 Director {
   Name = {{ bacula_server_dir }}
   Password = "{{ bacula_client_pass }}"
+{% if bacula_client_tls_enable|bool == True %}
+  TLS Enable = yes
+  TLS Require = yes
+  TLS Verify Peer = no
+  TLS CA Certificate File = /etc/bacula/ssl/ca.crt
+  TLS Certificate = /etc/bacula/ssl/{{ bacula_client_tls_fqdn }}.crt
+  TLS Key = /etc/bacula/ssl/{{ bacula_client_tls_fqdn }}.key  
+{% endif %}
 }
 
 #
@@ -34,11 +42,19 @@ Director {
 #
 FileDaemon {                          # this is me
   Name = {{ bacula_client_name }}
+{% if bacula_client_tls_enable|bool == True %}
+  FDport = 9112                  # where we listen for the director
+{% else %}
   FDport = 9102                  # where we listen for the director
+{% endif %}
   WorkingDirectory = /var/lib/bacula
   Pid Directory = /run/bacula
   Maximum Concurrent Jobs = 20
+{%if bacula_community_binaries|bool == True %}
+  Plugin Directory = /opt/bacula/plugins
+{% else %}
   Plugin Directory = /usr/lib/bacula
+{% endif %}
   FDAddress = {{ ansible_ssh_host }}
 }
 
