--- a/templates/etc/bacula/bacula-fd.conf
+++ b/templates/etc/bacula/bacula-fd.conf
@@ -1,10 +1,14 @@
 #
 # Default  Bacula File Daemon Configuration file
 #
-#  For Bacula release 5.2.13 (19 February 2013) -- redhat (Core)
+#  For Bacula release 9.4.2 (04 February 2019) -- debian 10.5
 #
 # There is not much to change here except perhaps the
 # File daemon Name to
+#
+#
+# Copyright (C) 2000-2015 Kern Sibbald
+# License: BSD 2-Clause; see file LICENSE-FOSS
 #
 
 #
@@ -13,21 +17,53 @@
 Director {
   Name = {{ bacula_server_dir }}
   Password = "{{ bacula_client_pass }}"
+{% if bacula_client_tls_enable|bool == True %}
+  TLS Enable = yes
+  TLS Require = yes
+  TLS Verify Peer = no
+  TLS CA Certificate File = /etc/bacula/ssl/ca.crt
+  TLS Certificate = /etc/bacula/ssl/{{ bacula_client_tls_fqdn }}.crt
+  TLS Key = /etc/bacula/ssl/{{ bacula_client_tls_fqdn }}.key  
+{% endif %}
 }
+
+#
+# Restricted Director, used by tray-monitor to get the
+#   status of the file daemon
+#
+#Director {
+#  Name = docker-host-01-mon
+#  Password = "ZUAUlQn15rQJouvyJZ4As_wDHskgzKdtQ"
+#  Monitor = yes
+#}
 
 #
 # "Global" File daemon configuration specifications
 #
 FileDaemon {                          # this is me
   Name = {{ bacula_client_name }}
+{% if bacula_client_tls_enable|bool == True %}
+  FDport = 9112                  # where we listen for the director
+{% else %}
   FDport = 9102                  # where we listen for the director
-  WorkingDirectory = /var/spool/bacula
-  Pid Directory = /var/run
+{% endif %}
+{% if ansible_distribution == 'CentOS' %}
+  WorkingDirectory = /opt/bacula/lib64
+{% else %}
+  WorkingDirectory = /var/lib/bacula
+{% endif %}
+  Pid Directory = /run/bacula
   Maximum Concurrent Jobs = 20
+{%if bacula_community_binaries|bool == True %}
+  Plugin Directory = /opt/bacula/plugins
+{% else %}
+  Plugin Directory = /usr/lib/bacula
+{% endif %}
+  FDAddress = {{ ansible_ssh_host }}
 }
 
 # Send all messages except skipped files back to Director
 Messages {
   Name = Standard
-  director = bacula-dir = all, !skipped, !restored
+  director = docker-host-01-dir = all, !skipped, !restored
 }
