updates for install packages on debian

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,7 @@ bacula_client_tls_fqdn: "{{ ansible_host }}"
 ##################################################
 
 # overwritten in playbook logic for community
-install_packages:
+bacula_client_install_packages:
  - bacula-client
  - bacula-common
 
