--- a/templates/etc/bacula/bacula-fd.conf
+++ b/templates/etc/bacula/bacula-fd.conf
@@ -54,7 +54,7 @@ FileDaemon {                          # this is me
 {% endif %}
   Pid Directory = /run/bacula
   Maximum Concurrent Jobs = 20
-{%if bacula_community_binaries|bool == True %}
+{%if ansible_distribution == 'CentOS' %}
   Plugin Directory = /opt/bacula/plugins
 {% else %}
   Plugin Directory = /usr/lib/bacula
