--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,8 +25,16 @@
 
 - name: Install Bacula FD (Client)
   package:
-    name: "{{ install_packages }}"
+    name: "{{ bacula_client_install_packages }}"
     state: latest
+  when: "ansible_os_family != 'Debian'"
+
+- name: Install Bacula FD (Client)
+  package:
+    name: "{{ bacula_client_install_packages }}"
+    state: latest
+    default_release: "{{ ansible_distribution_release }}-backports"
+  when: "ansible_os_family == 'Debian'"
 
 - name: Symbolic link new config dir
   file:
@@ -35,6 +43,7 @@
     owner: root
     group: root
     state: link
+  when: "ansible_distribution == 'CentOS'"
 
 - name: Gen a password for FD
   set_fact:
