--- a/templates/etc/bacula/bacula-fd.conf
+++ b/templates/etc/bacula/bacula-fd.conf
@@ -47,14 +47,18 @@ FileDaemon {                          # this is me
 {% else %}
   FDport = 9102                  # where we listen for the director
 {% endif %}
-{% if ansible_distribution == 'CentOS' %}
-  WorkingDirectory = /opt/bacula/lib64
+{% if community_install.stat.exists %}
+  WorkingDirectory = /opt/bacula/working
 {% else %}
   WorkingDirectory = /var/lib/bacula
 {% endif %}
+{% if community_install.stat.exists %}
+  Pid Directory = /opt/bacula/working
+{% else %}
   Pid Directory = /run/bacula
+{% endif %}
   Maximum Concurrent Jobs = 20
-{%if ansible_distribution == 'CentOS' %}
+{%if community_install.stat.exists %}
   Plugin Directory = /opt/bacula/plugins
 {% else %}
   Plugin Directory = /usr/lib/bacula
